# pizza-challenge

./: .gitignore  404.html  README.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
api/: Dockerfile  main.py  pizza_challenge-0.1.0-py3-none-any.whl  requirements.txt
api/app/: main.py  onnx_model.py
api/app/models/: __init__.py  prediction.py
conf/base/: parameters.yml
docs/: index.md
docs/source/: conf.py  index.md  index.rst
interface/: Dockerfile  app.py
notebooks/: cleaning.ipynb  deep_learning.ipynb  exploration.ipynb  exploration_cleaning.ipynb  preprocessing.ipynb  random_forest_classifier.ipynb  viz.ipynb
search/: search_index.json
src/: setup.py
src/ca_chlng/pipelines/training/: model.py  nodes.py  pipeline.py
src/pizza_challenge/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/pizza_challenge/pipelines/training/: __init__.py  model.py  nodes.py  pipeline.py
src/tests/: test_run.py
