[tool.kedro]
package_name = "ca_chlng"
project_name = "CybelAngel Challenge"
project_version = "0.17.7"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_third_party = "kedro"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/ca_chlng -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.poetry]
name = "ca-chlng"
version = "0.1.0"
description = ""
authors = ["ChainYo <t.chaigneau.tc@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
pytorch-lightning = "^1.5.10"
pandas = "^1.4.1"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
