[tool.kedro]
package_name = "ca_chlng"
project_name = "CybelAngel Challenge"
project_version = "0.17.7"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_third_party = "kedro"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/ca_chlng -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.poetry]
name = "ca-chlng"
version = "0.1.0"
description = ""
authors = ["ChainYo <t.chaigneau.tc@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
pytorch-lightning = "^1.5.10"
pandas = "^1.4.1"
seaborn = "^0.11.2"
wordcloud = "^1.8.1"
gensim = "^4.1.2"
nltk = "^3.7"
scikit-learn = "^1.0.2"
xgboost = "^1.5.2"
optuna = "^2.10.0"
plotly = "^5.6.0"
nbformat = "^5.2.0"
torchvision = "^0.12.0"
torch = {url = "https://download.pytorch.org/whl/cu113/torch-1.11.0%2Bcu113-cp38-cp38-linux_x86_64.whl"}
transformers = "^4.17.0"
wandb = "^0.12.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
